# TinyLLM

./: .gitignore  README.md  oneTab.txt  pretrain.py  pretrain_gpt.py  pyproject.toml  python_environment_check.py  requirements.txt  run_gemma.py  run_gpt.py  run_gpt2_124M.py  run_gpt_classifer_sft.py  run_gpt_classification_sft.py  run_gpt_clf_sft.py  run_gpt_instruction_sft.py  run_gpt_lora_sft.py  run_gpt_pretrain.py  run_llama.py  run_qwen.py  snippet.py  test.json  test.py  train_loop_template.py  training.py
TinyLlama/: llama_model.py  pretrain.py
apps/: app_orig.py  app_own.py
cfgs/: param_demo.md
config/: Config.py
data_prepare/: data_preprocessing.py
data_provider/: README.md  data_add.py  data_downloader.py  data_extractous.py  data_load_pretrain.py  data_loader.py  data_markitdown.py  data_preprocessing.py  data_translation.py  dataset.py  load_save_data.py  train_tokenizer.py
ddp/: ddp_script.py  ddp_script_torchrun.py
distributed_training/: README.md  log_utils.py
docs/: attention.xlsx  llm.drawio  snippet.py
embeddings/: RoPE.py  WoE.py  fixPE.py  token_embedding.py
evaluate/: ollama_evaluate.py
evaluating/: ollama_api.py  ollama_evaluate.py  openai_evaluate.py  query_model.py
exp/: 00_orig.py  01_opt_single_gpu.py  02_opt_multi_gpu_ddp.py  exp_basic.py  exp_finetune_gpt_classification.py  exp_finetune_gpt_classifier.py  exp_finetune_gpt_classifier_lora.py  exp_finetune_gpt_clf.py  exp_finetune_gpt_dpo.py  exp_finetune_gpt_instruction_flow.py  exp_finetune_gpt_instruction_flow_evaluate.py  exp_finetune_gpt_preference.py  pretrain.py  (+9 more)
(+660 files in other folders)
